adding multi tenant and MRJAR support